# fireflymit

./: .editorconfig  .gitignore  .npmrc  .stylelintignore  404.html  AGENTS.md  CLAUDE.md  LICENSE  README.md  TODO.md  build.config.shared.ts  commitlint.config.mjs  deploy.bat  deploy.sh  eslint.config.js  hashmap.json  index.html  package.json  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  stylelint.config.mjs  tsconfig.base.json  tsconfig.json  tsconfig.node.json  turbo.json  uno.config.ts  vercel.json  vite.config.ts
apps/admin-backend/: README.md  alembic.ini  banner.txt  main.py  pyproject.toml  requirements.txt
apps/admin-backend/app/: init_app.py
apps/admin-backend/app/alembic/: env.py
apps/admin-backend/app/api/v1/module_common/: __init__.py
apps/admin-backend/app/api/v1/module_common/file/: controller.py  service.py
apps/admin-backend/app/api/v1/module_common/monitoring/: __init__.py  health.py  schema.py
apps/admin-backend/app/api/v1/module_monitor/: __init__.py
apps/admin-backend/app/api/v1/module_monitor/cache/: controller.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_monitor/online/: controller.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_monitor/resource/: controller.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_monitor/server/: controller.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_platform/: __init__.py
apps/admin-backend/app/api/v1/module_platform/email/: controller.py  crud.py  model.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_platform/invoice/: __init__.py  controller.py  crud.py  model.py  oss_licenses.json  oss_licenses_helper.py  pdf_helper.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_platform/menu/: controller.py  crud.py  model.py  schema.py  service.py
apps/admin-backend/app/api/v1/module_system/: __init__.py
apps/admin-backend/app/common/: constant.py  dataclasses.py  enums.py  request.py  response.py
apps/admin-backend/app/config/: path_conf.py  setting.py
apps/admin-backend/app/core/: ap_scheduler.py  base_crud.py  base_model.py  base_params.py  base_schema.py  cache_util.py  database.py  dependencies.py  discover.py  exceptions.py  http_limit.py  logger.py  middlewares.py  permission.py  redis_crud.py  request_context.py  router_class.py  security.py  validator.py
apps/admin-backend/app/plugin/module_ai/: plugin.toml
apps/admin-backend/app/plugin/module_ai/chat/: controller.py  crud.py  schema.py  service.py  utils.py  ws.py
apps/admin-backend/app/plugin/module_example/: plugin.toml
apps/admin-backend/app/plugin/module_example/demo/: controller.py  crud.py  model.py  schema.py  service.py
apps/admin-backend/app/plugin/module_generator/: plugin.toml
apps/admin-backend/app/plugin/module_generator/gencode/: controller.py  crud.py  model.py  schema.py  service.py
apps/admin-backend/app/plugin/module_task/: __init__.py  plugin.toml
apps/admin-backend/app/plugin/module_task/cronjob/: __init__.py
apps/admin-backend/app/plugin/module_task/workflow/: __init__.py
apps/admin-backend/app/scripts/: initialize.py
apps/admin-backend/app/scripts/data/: platform_email_config.json  platform_email_template.json  platform_menu.json  platform_package.json  platform_package_menu.json  platform_plugin.json  platform_tenant.json  platform_tenant_plugin.json  platform_user_tenant.json  sys_dept.json  sys_dict_data.json  sys_dict_type.json  sys_param.json  sys_position.json  sys_role.json  sys_user.json  sys_user_roles.json  task_workflow_node_type.json
apps/admin-backend/app/utils/: banner.py  captcha_util.py  common_util.py  console.py  cron_util.py  email_util.py  excel_util.py  gen_util.py  hash_bcrpy_util.py  import_util.py  ip_local_util.py  jinja2_template_util.py  payment.py  pdf_generator.py  string_util.py  upload_util.py  xss_util.py
apps/admin-backend/env/: .env.dev  .env.dev.example  .env.prod.example
apps/admin-backend/sql/mysql/: fastapiadmin-2026-06-21_180728-dump.sql
apps/admin-backend/sql/postgres/: fastapiadmin-2026-06-21_181339-dump.sql
apps/admin-backend/static/swagger/redoc/bundles/: redoc.standalone.js  redoc.standalone.js.map
apps/admin-backend/templates/emails/: welcome.jinja2
apps/admin-backend/templates/invoice/: invoice.jinja2  oss_license.jinja2
apps/admin-backend/templates/python/: controller.py.jinja2  crud.py.jinja2  model.py.jinja2  schema.py.jinja2  service.py.jinja2
apps/admin-backend/templates/ts/: api.ts.jinja2
apps/admin-backend/templates/vue/: index.vue.jinja2
apps/admin-backend/tests/: conftest.py  openapi.json  test_api_module_ai.py  test_api_module_common.py  test_api_module_example.py  test_api_module_generator.py  test_api_module_monitor.py  test_api_module_platform.py  test_api_module_system.py  test_api_module_task.py  test_main.py
docker/: .env  (+2 more)
(+762 files in other folders)
